--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="fonts/themify-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome_6.1.1_css_all.min.css" />
     <link href="css/glanz_style.css" rel="stylesheet">
-    <link href="css/gallery.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,600,700%7COpen+Sans:300,400,700%7CPlayfair+Display:400,400i,700,700i" rel="stylesheet">
     <link href="fonts/marsha/stylesheet.css" rel="stylesheet">
     <link href="fonts/tangerine/stylesheet.css" rel="stylesheet">
@@ -31,24 +30,28 @@
                     <p>Words cannot adequately express the overflowing joy and gratitude in our hearts as we reminisce about the perfect wedding day we shared on the summer solstice at Fingask Castle. We are still floating on cloud nine, and it's all thanks to each and every one of you who traveled far and wide to be with us. Your presence made our day even more extraordinary, and we are incredibly grateful for the effort and love you put into being there for us.</p>
                     <p>Thank you, from the depths of our hearts, for joining us on this incredible journey and for making our wedding an unforgettable celebration of love. We are truly blessed to have such wonderful family and friends in our lives.</p>
                     <p>The pictures that our photographers <a href="https://www.delandjayjayweddingphotography.com/">Del and Jayjay</a> took at the wedding bring back the most beautiful memories for us. We hope you enjoy them too!</p>
-                    <p>PS: You can download the pictures individually here or all of them from this <a>Google Drive folder</a>.</p>
                 </div>
 
             </section>
 
             <section id="gallery" class="gla_section gla_image_bck" data-color="#fafafd">
                 <div class="container text-center">
-                    <div id="image-gallery" class="images gla_portfolio"></div>
-                    <div id="gallery-pagination">
-                        <button id="btnPrevious">&larr; <span class="sr-only">Previous</span></button>
-                        <div>
-                            <div id="gallery-dots"></div>
-                            <span id="page"></span>
-                        </div>
-                        <button id="btnNext"><span class="sr-only">Next </span>&rarr;</button>
-                    </div>
+                    <a data-flickr-embed="true" href="https://www.flickr.com/photos/198659080@N03/albums/72177720309490487" title="Kristina + Leo Wedding"><img src="https://live.staticflickr.com/65535/53017848196_a7cbf5dce7_b.jpg" width="1024" height="768" alt="Kristina + Leo Wedding"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                 </div>
             </section>
+
+        </section>
+
+        <section class="gla_section gla_image_bck gla_fixed gla_wht_txt" data-stellar-background-ratio="0.8" data-image="images/perthshire.jpeg">
+
+            <!-- Over -->
+            <div class="gla_over" data-color="#1e1d2d" data-opacity="0.4"></div>
+
+            <div class="container text-center">
+                <p><img src="images/animations/thnyou_wh.gif" alt="" height="200" data-bottom-top="@src:images/animations/thnyou_wh.gif"></p>
+
+            </div>
+            <!-- container end -->
 
         </section>
 
@@ -56,6 +59,5 @@
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="js/glanz_library.js"></script>
 <script src="js/glanz_script.js"></script>
-<script src="js/gallery.js"></script>
 </body>
 </html>
